--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
     <h5>Hello World!</h5>
-    <img src="/picture.jpg" alt="My_picture" style="width: 30px; height: 30px; padding: 10px;">
-    <textarea name="" id="" cols="30" rows="10"> This should work</textarea>
+    <img src="./picture.jpg" alt="My_picture" style="padding: 10px;">
 </html>
