--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <h5>Hello World!</h5>
-    <img src="./picture.jpg" alt="My_picture" style="padding: 10px;">
+    <img src="./picture.jpg" alt="My_picture" style="widows: 100px; height:100px; padding: 10px;">
 </html>
